[workspace]
members = [
]
[package]
name = "lighttpd_rust_amalgamated"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "lighttpd_rust_amalgamated"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src/lighttpd_amalgamated.rs"
name = "lighttpd_amalgamated"
[dependencies]
c2rust-analysis-rt = { version = "0.17.0", path = "../../c2rust/analysis/runtime", optional = true }
c2rust-bitfields = { path = "../../c2rust/c2rust-bitfields"}
c2rust-bitfields-derive = { path = "../../c2rust/c2rust-bitfields-derive"}
libc= "0.2"
