[workspace]
members = [
]
[package]
name = "rust"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "rust"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src/server.rs"
name = "server"
[dependencies]
c2rust-bitfields= "0.3"
libc= "0.2"
